# jinglepings

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/controller/: JingleController.cpp  JingleController.h
src/draw/: JingleBuffer.cpp  JingleBuffer.h
src/socket/: Socket.cpp  Socket.h
src/tui/: Tui.cpp  Tui.h
